2007-08-30 Thu  Jari Aalto  <jari dot aalto A T cante dot net>

	* bin/cygbuild.sh (function CygbuildShellEnvironenment()): 1.937
	New.
	(function CygbuildRunShell()): 1.937 Slimmed. Moved code to
	`CygbuildShellEnvironenment'
	(function CygbuildCmdBuildMainMakefile()): 1.937 Removed duplicate
	environment code. Use `CygbuildShellEnvironenment'
	(function CygbuildDefineGlobalCompile()): 1.937 Permanently
	override CC=gcc, CXX=g++

2007-08-29 Wed  Jari Aalto  <jari dot aalto A T cante dot net>

	* bin/cygbuild.sh (function CygbuildCmdPrepPatch()): 1.937
	More accurate check for determining if cygwin patch was
	already applied.

2007-08-28 Tue  Jari Aalto  <jari dot aalto A T cante dot net>

	* bin/cygbuild-rebuild.sh: 1.8 Removed Id. Changed VERSION.

	* bin/cygbuild.sh (function CygbuildCommandMainCheckHelp()): 1.937
	Moved  -V|--version here from `CygbuildCommandMain'.
	(function CygbuildHelpLong()): 1.937 Added new argument $exit.
	(function CygbuildHelpShort()): 1.937 Added new argument $exit.
	(CygbuildHelpShort::NOTES): 1.937 Removed checkout instructions.
	(function CygbuildCygcheckLibraryDepAdjust()): 1.937
	The indentation level proved to be unreliable source of depend
	information. Restoeed old behavior. See
	<http://cygwin.com/ml/cygwin-apps/2007-08/msg00215.html> for
	more information.

	* bin/cygbuild-rebuild.pod: (HELP): Removed AVAILABILITY

	* bin/cygbuild.pl: ($URL): Unused variable removed.
	(top level::Id): tag removed.
	(HELP::OPTIONS): Removed version control software names
	from --checkout option description.

	* README: (Information for developers): Removed sourceforge
	information. Removed all CVS information and replaced it
	with generic VCS instructions.
	(Information for developers::Using CVS commands from Emacs):
	Topic removed.

	* etc/makefile/vars.mk (TAR_OPT_NO):Ignore git, bzr, hg, RCS.

	* etc/etc/programs.conf (EGREP): Added
	--binary-files=without-match

	* bin/cygbuild.sh: 1.937
	(CygbuildCygcheckLibraryDepMain): Renamed.